<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_run_app"
        android:icon="@drawable/ic_run"
        android:title="@string/run_app" />
    <item
        android:id="@+id/menu_share_apk"
        android:icon="@drawable/ic_share"
        android:title="@string/share_apk" />
    <item
        android:id="@+id/menu_extract_apk"
        android:icon="@drawable/ic_floppy"
        android:title="@string/extract_apk" />
    <item
        android:id="@+id/menu_upload_apk"
        android:icon="@drawable/ic_cloud_upload"
        android:title="@string/upload_apk" />
    <item
        android:id="@+id/menu_bluetooth_apk"
        android:icon="@drawable/ic_bluetooth"
        android:title="@string/bluetooth_apk" />
    <item
        android:id="@+id/menu_find_on_gp"
        android:icon="@drawable/ic_google_play"
        android:title="@string/find_on_gp" />
    <item
        android:id="@+id/menu_find_on_store"
        android:icon="@drawable/ic_store"
        android:title="@string/find_on_store" />
    <item
        android:id="@+id/menu_required_permissions"
        android:icon="@drawable/ic_lock_open"
        android:title="@string/required_permissions" />
    <item
        android:id="@+id/menu_app_details"
        android:icon="@drawable/ic_settings"
        android:title="@string/app_details" />
    <item
        android:id="@+id/menu_remove_app"
        android:icon="@drawable/ic_delete"
        android:title="@string/remove_app" />
</menu>
