<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_install_app"
        android:icon="@drawable/ic_install"
        android:title="@string/install_app" />
    
    <item
        android:id="@+id/menu_save_to_device"
        android:icon="@drawable/ic_save" 
        android:title="@string/save_to_device" /> 
        
    <item
        android:id="@+id/menu_share_apk"
        android:icon="@drawable/ic_share"
        android:title="@string/share_apk" />
    <item
        android:id="@+id/menu_upload_apk"
        android:icon="@drawable/ic_cloud_upload"
        android:title="@string/upload_apk" />
    <item
        android:id="@+id/menu_bluetooth_apk"
        android:icon="@drawable/ic_bluetooth"
        android:title="@string/bluetooth_apk" />
    <item
        android:id="@+id/menu_find_on_gp"
        android:icon="@drawable/ic_google_play"
        android:title="@string/find_on_gp" />
    <item
        android:id="@+id/menu_find_on_store"
        android:icon="@drawable/ic_store"
        android:title="@string/find_on_store" />
    <item
        android:id="@+id/menu_required_permissions"
        android:icon="@drawable/ic_lock_open"
        android:title="@string/required_permissions" />
    <item
        android:id="@+id/menu_remove_app"
        android:icon="@drawable/ic_delete"
        android:title="@string/remove_app" />
</menu>
