<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_variant"
        android:title="@string/share_url"
        app:iconTint="?android:textColorPrimary"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/menu_installed"
        android:enabled="true"
        android:icon="@drawable/ic_apps"
        android:title="@string/nav_installed" />
    <item
        android:id="@+id/menu_distro"
        android:enabled="true"
        android:icon="@drawable/ic_download_smooth"
        app:iconTint="?android:textColorPrimary"
        app:showAsAction="always"
        android:title="@string/nav_downloaded" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/nav_info" />
</menu>
