<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/unpublish"
        android:icon="@drawable/ic_delete"
        android:title="@string/unpublish_file"
        app:showAsAction="withText" />
    <item
        android:id="@+id/unlink"
        android:icon="@drawable/ic_delete_forever"
        android:title="@string/unlink_file"
        app:showAsAction="withText" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_from_store"
        app:iconTint="?android:textColorPrimary"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/abuse"
        android:icon="@drawable/ic_alert"
        android:title="@string/abuse"
        app:iconTint="?android:textColorPrimary"
        app:showAsAction="ifRoom|withText" />
</menu>