<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="ifRoom|withText"
        android:title="@string/refresh" />
    <item
        android:id="@+id/settings"
        app:showAsAction="never"
        android:title="@string/settings" />
    <item
        android:id="@+id/info"
        app:showAsAction="never"
        android:title="@string/info" />
</menu>