<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        style="@style/MaterialButtonSecondaryOutline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="4dp"
        android:layout_weight="1"
        android:text="@string/cancel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remove_button"
        style="@style/MaterialButtonSecondaryOutline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="4dp"
        android:layout_weight="1"
        android:text="@string/remove" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/install_button"
        style="@style/MaterialButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="4dp"
        android:layout_weight="1"
        android:text="@string/install" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_button"
        style="@style/MaterialButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="4dp"
        android:layout_weight="1"
        android:text="@string/update" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/launch_button"
        style="@style/MaterialButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="4dp"
        android:layout_weight="1"
        android:text="@string/open" />

</LinearLayout>
