<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:gravity="center_vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="?attr/colorOnSurface"
            android:text="@string/required_permissions" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_forward"
            app:tint="?attr/colorOnSurfaceVariant" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/access_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:text="@string/internet_access"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:drawableStartCompat="@drawable/ic_internet"
        app:drawableTint="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/access_calls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:text="@string/calls_access"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:drawableStartCompat="@drawable/ic_phone"
        app:drawableTint="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/access_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:text="@string/sms_access"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:drawableStartCompat="@drawable/ic_sms"
        app:drawableTint="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/access_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:text="@string/storage_access"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:drawableStartCompat="@drawable/ic_storage"
        app:drawableTint="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/access_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:text="@string/location_access"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:drawableStartCompat="@drawable/ic_location"
        app:drawableTint="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/access_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:drawableStartCompat="@drawable/ic_permissions"
        app:drawableTint="?attr/colorOnSurfaceVariant"
        tools:text="14 other permissions" />

</LinearLayout>
